# general-purpose-scripts

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  backup-jenkins-home  deploydockercon  disable-github-actions.py  fetch-github-repos.py  genconfigs  generate-todo-report  link-scripts-fromdir  lower-all-files  pathjoin  pyproject.toml  redeploydocker  requirements-dev.txt  requirements.txt  update-remote-forks
.github/workflows/: build-images.yaml
.jenkins/: Jenkinsfile  general-purpose-scripts.Jenkinsfile  general-purpose-scripts.Jenkinsfile.j2  gps-container-images.Jenkinsfile  job-dsl.groovy
dockerfiles/: Dockerfile.gps-python  gps-python.Dockerfile  gps-python.Dockerfile.j2  gps-shell.Dockerfile  gps-shell.Dockerfile.j2
generate-jobs-yaml/: README.md  generate-jobs-yaml.py
internal/tools/: go.mod  go.sum
jcasc/: jcasc.py
job-dsl-util/: job-dsl-util.py
python/: disable_github_actions.py  fetch_github_repos.py  genconfigs.py  genmyrepos_workspace.py  keys.py  update_github_repos_license.py  update_remote_forks.py
shell/: git_reclone  install_codium_icon  install_devuan  lowerfiles  mkcommondirs  pathjoin  replacechar
src/: configs.py  update_gh_forks.py
utils/: renderj2_tpls.py
