[tool.poetry]
name = "gps-cavcrosby"
version = "1.0.0"
description = "Scripts that I use on a daily basis or find useful"
authors = ["Conner Crosby <conner@cavcrosby.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
pylib-cavcrosby = {git = "https://github.com/cavcrosby/pylib.git", branch = "main"}
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
flake8-docstrings = "^1.6.0"
Jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
